dnl Process this file with autoconf to produce a configure script.
AC_INIT(emul.c)

AC_CONFIG_HEADER(include/config.h)

dnl Check for optional features
AC_ARG_WITH(oss-sound,[  --with-oss-sound        enable support for Open Sound System sound output], AC_DEFINE(OSS_SOUND))
AC_ARG_WITH(sparc-sound,[  --with-sparc-sound        enable support for Sun /dev/audio sound output], AC_DEFINE(OSS_SOUND))
AC_ARG_WITH(mit-shm, [  --with-mit-shm          enable MIT Shared Memory extension support], AC_DEFINE(MITSHM))
AC_ARG_WITH(debug, [  --with-debug            enable debugging support], AC_DEFINE(DEBUG))

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_INSTALL

dnl Checks for libraries.
AC_PATH_XTRA

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h unistd.h string.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_TIME
AC_C_BIGENDIAN
AC_C_CONST
AC_C_INLINE
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_CHECK_SIZEOF(int,4)
AC_CHECK_SIZEOF(short,2)
AC_CHECK_SIZEOF(long,4)

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_CHECK_FUNCS(gettimeofday strdup random lrand48)

dnl Misc
AC_SUBST(TARGET)
AC_OUTPUT(Makefile)

dnl Makes symlinks
if test "${with_oss_sound+set}" = set; then
	ln -s ${srcdir}/arch/oss/snd-drv.c ${srcdir}/arch/oss/snd-drv.h .
else
if test "${with_sparc_sound+set}" = set; then
	ln -s ${srcdir}/arch/sparc/snd-drv.c ${srcdir}/arch/oss/snd-drv.h .
else
	ln -s ${srcdir}/arch/generic/snd-drv.c ${srcdir}/arch/generic/snd-drv.h .
fi
fi

if test "${with_x+set}" = set; then
	ln -s ${srcdir}/arch/x11/adb-drv.c ${srcdir}/arch/x11/adb-drv.h .
	ln -s ${srcdir}/arch/x11/vid-drv.c ${srcdir}/arch/x11/vid-drv.h .
else
	ln -s ${srcdir}/arch/svgalib/adb-drv.c ${srcdir}/arch/svgalib/adb-drv.h .
	ln -s ${srcdir}/arch/svgalib/vid-drv.c ${srcdir}/arch/svgalib/vid-drv.h .
fi

ln -s ${srcdir}/arch/generic/main.c  ${srcdir}/arch/generic/main.h .
