## Process this file with automake to produce Makefile.in

bin_PROGRAMS = xgs
hello_SOURCES = adb.c clock.c cpu.c debugger.c disks.c dispatch.c emul.c fontutil.c hires.c imgconv.c imgutil.c iwm.c lores.c memory.c opcodes1.c opcodes2.c opcodes3.c opcodes4.c opcodes5.c rw.c smtport.c sound.c super.c table.c test.c text.c video.c
